...
    <string name="dites">dites</string>
    <string name="ou">ou</string>
    <string name="modifier">Modifier</string>
    <string name="aajoute">a ajouté</string>
    <string name="principal">Principal</string>
    <string name="parametres">Paramètres</string>
    <string name="activated">Activé</string>
    <string name="deactivated">Désactivé</string>
    <string name="activate">Activer</string>
    <string name="deactivate">Désactiver</string>
    <string name="stoppedByStepText">Marche détectée - Arrêt automatique</string>
    <string name="stepDetectorOption">Désactiver quand je marche</string>
    <string name="areYouSure">Êtes-vous sûr ?</string>

...
