<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DisMoiToutSmsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:background="?selectableItemBackground">

        <ImageButton
            android:id="@+id/status_icon"
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:padding="24sp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:background="@drawable/ripple_selector"
            android:src="@drawable/ic_volume_up_white_512dp"/>

    </FrameLayout>

    <Switch
        android:id="@+id/switch_activation"
        android:layout_width="match_parent"
        android:layout_height="64sp"
        android:padding="16sp"
        android:background="@color/blue900"
        android:text="@string/diction_des_sms"/>

</LinearLayout>
